Began working on getting method names into the symbol table.  Declarations are in there now.  Onwards to getting the usages recorded correctly, which is the hard part.
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@3517 51baf565-9d33-0410-a72c-fc3788e3496d